fix section header alignment

--- a/evthronblog/themes/stack/assets/scss/partials/layout/list.scss
+++ b/evthronblog/themes/stack/assets/scss/partials/layout/list.scss
@@ -1,3 +1,6 @@
+header{
+    display: flex;
+}
 .section-card {
     border-radius: var(--card-border-radius);
     background-color: var(--card-background);
@@ -6,6 +9,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    width : 100%;
 
     --separation: 15px;
 
